--- a/src/stylesheets/About.css
+++ b/src/stylesheets/About.css
@@ -1,16 +1,18 @@
-.about-main-container{
+.about {
+    width: 100%;
+}
+
+.about-main-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 5rem 0;
+    margin: 15rem 0;
     display: flex;
     flex-direction: column;
+    padding: 0 2rem;
 }
 
-.about{
-    width: 90%;
-}
-.about__p--hello{
+.about__p--hello {
     display: flex;
     align-items: center;
     gap: 1rem;
@@ -18,47 +20,104 @@
     color: var(--text-secondary);
 }
 
-.about__p-img{
+.about__p-img {
     height: 2rem;
 }
 
-.about__p{
-    font-size: 2rem;
-    color: var(--white);
-    margin-bottom: 2rem;
-    line-height: 3rem;
-}
-
-.about__h2{
+.about__h2 {
     font-size: 5.4rem;
     color: var(--white);
-    margin: 1rem 0;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
 }
 
-.about__icon{
-    color: var(--text-secondary);
+.about__icon {
+    color: #5c5c5c;
 }
 
-.social-links{
+.social-links {
     padding: 1rem 0;
     display: flex;
-    gap: 2rem;
+    gap: 3rem;
 }
 
-.about__icon{
+.about__icon {
     cursor: pointer;
-    font-size: 2rem;
-    transition: color .07s ease-in-out, scale .07s ease-in-out;
+    font-size: 2.5rem;
+    transition: color .1s ease-in-out;
 }
 
-.about__icon:hover{
+.about__icon:hover {
     color: var(--white);
-    scale: 115%;
+    /* transform: scale(115%); */
 }
 
-.about__img{
-    margin: 3rem 0;
-    aspect-ratio: 1;
-    object-fit: cover;
-    width: 100%;
+.about__p {
+    margin-bottom: 3rem;
+    text-transform: uppercase;
+    font-size: 3rem;
+    color: #FFFFFF;
+}
+
+.about__p .word {
+    transform: translateY(5rem);
+    transition: transform .2s, opacity .2s;
+    opacity: 0;
+}
+
+.about__p-alternative {
+    font-size: 2rem;
+    color: var(--white);
+    margin-bottom: 3rem;
+    width: 75%;
+    font-weight: 300;
+}
+
+.about__p-alternative-2 {
+    font-size: 2rem;
+    color: var(--white);
+    margin-bottom: 3rem;
+    width: 75%;
+    font-weight: 300;
+}
+
+
+
+@media screen and (min-width: 720px) {
+    .about-main-container {
+        padding: 4rem;
+        justify-content: space-between;
+        flex-direction: row;
+    }
+
+    .about-text-secondary {
+        display: flex;
+        gap: 3rem;
+    }
+
+    .about__content-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: flex-end;
+    }
+
+    .about__content {
+        max-width: 70%;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    .about-main-container {
+        padding: 6rem;
+    }
+
+}
+
+@media screen and (min-width: 1100px) {
+    .about__p {
+        font-size: 4rem;
+    }
+
 }
