--- a/src/stylesheets/Skills.css
+++ b/src/stylesheets/Skills.css
@@ -1,37 +1,72 @@
-.skills-main-container{
+.skills-header {
+    width: 100%;
+    height: 35vh;
+    background-color: var(--background-color);
+}
+
+.skills-main-container {
+    padding: 0 2rem;
     width: 100%;
     height: 100%;
-    background-color: var(--white);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.skills-content{
-    padding: 6rem 3rem;
+.skills-content {
+    background-color: var(--white);
+    border-radius: 7rem;
+    padding: 10rem 5rem;
     width: 100%;
 }
 
-.skills-content__h2{
+.skills-content__h2 {
+    overflow: hidden;
     font-size: 3.5rem;
     text-align: center;
 }
 
-.skills-content__h3{
-    margin: 1rem 0;
+.skills-content__h2 span {
+    display: inline-block;
+    transform: translateY(100%);
+}
+
+.skills-content__h3 {
+    margin-top: 1rem;
+    overflow: hidden;
     font-size: 2rem;
     text-align: center;
     font-weight: 400;
 }
 
-.skills-container{
-    margin-top: 6rem;
+.skills-content__h3 span {
+    display: inline-block;
+    transform: translateY(100%);
+}
+
+.skill-carousel-main-container {
+    width: 100%;
+    overflow: hidden;
     display: flex;
     justify-content: center;
-    gap: 6rem;
-    width: 100%;
+}
+
+.skill-carousel {
+    transform: translateY(190%);
+    margin-top: 6rem;
+    width: max-content;
     overflow: hidden;
 }
 
-.skills-container__item{
+.skills-container {
+    gap: 6rem;
+    display: flex;
     width: max-content;
+}
+
+
+.skills-container__item {
+    width: 10rem !important;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -39,24 +74,93 @@
     gap: 1rem;
 }
 
-.skills-container__item-name{
+.skills-container__item-name {
+    text-align: center;
     font-size: 2rem;
 }
 
-.skills-container__item-icon{
+.skills-container__item-icon {
     font-size: 4rem;
 }
 
-.skills-content .h3{
-    margin-top: 6rem;
-}
-.skills-content .h3, .p{
-    margin-bottom: 1.6rem;
+.skills-content .h3,
+.p {
+    margin-bottom: 2rem;
     font-size: 2rem;
+    line-height: 3rem;
+
 }
 
-button.light:hover{
+.button.light:hover {
     color: var(--white);
     border: 2px solid var(--background-color);
     background-color: var(--background-color);
+}
+
+.skills-bottom-container {
+    margin-top: 6rem;
+    display: flex;
+    flex-direction: column;
+    gap: 10rem;
+    align-items: center;
+}
+
+.ordinary-skills {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+}
+
+
+.ordinary-skills p {
+    max-width: 40rem;
+    text-align: center;
+}
+
+.ordinary-skills .h3 {
+    line-height: 4rem;
+    margin-bottom: 2rem;
+}
+
+.quote-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex: 1;
+}
+
+.quote-container .icon {
+    font-size: 4rem;
+    margin-bottom: 2rem;
+}
+
+.quote-container__quote {
+    max-width: 40rem;
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 2rem;
+    line-height: 3rem;
+}
+
+.quote-container__title {
+    font-size: 2rem;
+    font-weight: 600;
+    text-align: center;
+    padding: .6em;
+}
+
+@media screen and (min-width: 900px) {
+    .skills-main-container {
+        padding: 6rem;
+    }
+
+    .skills-bottom-container {
+        flex-direction: row;
+        align-items: flex-start;
+
+    }
+
 }
