Will-Change property added

--- a/src/stylesheets/Projects.css
+++ b/src/stylesheets/Projects.css
@@ -10,10 +10,12 @@
     color: var(--white);
     font-size: 30rem;
     font-weight: 500;
+    will-change: transform;
 }
 
 
 .projects_section {
+    will-change: transform;
     display: flex;
     flex: none;
     flex-direction: column;
