--- a/src/stylesheets/About.css
+++ b/src/stylesheets/About.css
@@ -68,7 +68,7 @@
 
 .about__p-alternative {
     font-size: 2rem;
-    color: var(--white);
+    color: #9e9e9e;
     margin-bottom: 3rem;
     width: 75%;
     font-weight: 300;
@@ -76,7 +76,7 @@
 
 .about__p-alternative-2 {
     font-size: 2rem;
-    color: var(--white);
+    color: #9e9e9e;
     margin-bottom: 3rem;
     width: 75%;
     font-weight: 300;
