--- a/src/stylesheets/Welcome.css
+++ b/src/stylesheets/Welcome.css
@@ -146,7 +146,7 @@
         font-size: 25rem;
     }
     .welcome__img--title-container{
-        height: 50%;
-        object-position: top;
+        max-height: 60%;
+        object-position: bottom;
     }
 }
